Metadata/objects/Payment_Run__c.object
<CustomObject>
    <fields>
        <fullName>Completed_Time__c</fullName>
        <description>Invoice run completed  time</description>
        <label>Completed Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Exception_Log__c</fullName>
        <label>Exception Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Failed_Transactions__c</fullName>
        <label>Failed Transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoices_Processed__c</fullName>
        <label>Invoices Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Scheduler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Scheduler</label>
        <referenceTo>Payment_Scheduler__c</referenceTo>
        <relationshipLabel>Payment Runs</relationshipLabel>
        <relationshipName>Payment_Runs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Successful_Transactions__c</fullName>
        <label>Successful Transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Payment_Value__c</fullName>
        <label>Total Payment Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transactions_Generated__c</fullName>
        <formula>Failed_Transactions__c +  Successful_Transactions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transactions Generated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Payment Run</label>
    <nameField>
        <label>Payment_Run Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>